--- a/documentation/operators/to.html
+++ b/documentation/operators/to.html
@@ -14,7 +14,7 @@ id: to
 <h3>convert an Observable into another object or data structure</h3>
 
 <figure>
- <img src="images/To.c.png" style="width:100%;" alt="To" />
+ <img src="images/to.c.png" style="width:100%;" alt="To" />
  <figcaption><p>
   The various language-specific implementations of ReactiveX have a variety of operators that you can use to
   convert an Observable, or a sequence of items emitted by an Observable, into another variety of object or
