repairing links to nonexistent "Throttle" page
I must have changed my mind half-way through and decided to call it
Debounce

--- a/documentation/operators/backpressure.html
+++ b/documentation/operators/backpressure.html
@@ -53,7 +53,7 @@ id: backpressure
  as the use of the operators described on this page, or operators like
  <a href="buffer.html"><span class="operator">Buffer</span></a>, 
  <a href="sample.html"><span class="operator">Sample</span></a>, 
- <a href="throttle.html"><span class="operator">Throttle</span></a>, or
+ <a href="debounce.html"><span class="operator">Debounce</span></a>, or
  <a href="window.html"><span class="operator">Window</span></a>.
 </p>
 
@@ -61,7 +61,7 @@ id: backpressure
 <ul>
  <li><a href="buffer.html"><span class="operator">Buffer</span></a></li>
  <li><a href="sample.html"><span class="operator">Sample</span></a></li>
- <li><a href="throttle.html"><span class="operator">Throttle</span></a></li>
+ <li><a href="debounce.html"><span class="operator">Debounce</span></a></li>
  <li><a href="window.html"><span class="operator">Window</span></a></li>
 </ul>
 
