--- a/documentation/operators/sample.html
+++ b/documentation/operators/sample.html
@@ -148,7 +148,7 @@
    <h4>See Also</h4>
    <ul>
     <li><a href="backpressure.html">Backpressure-related Operators</a></li>
-    <li><a href="throttle.html"><span class="operator">Throttle</span></a></li>
+    <li><a href="debounce.html"><span class="operator">Debounce</span></a></li>
     <li><a href="window.html"><span class="operator">Window</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/13_TimeShiftedSequences.html#Sample"><cite>Introduction to Rx</cite>: Sample</a></li>
     <li><a href="http://rxmarbles.com/#sample">RxMarbles: <code>sample</code></a></li>
