--- a/tutorials.html
+++ b/tutorials.html
@@ -202,6 +202,7 @@
 <li><a href="http://futurice.com/blog/top-7-tips-for-rxjava-on-android">Top 7 Tips for RxJava on Android</a></li>
 <li><a href="https://android-arsenal.com/details/1/1259">RxBinding</a> &mdash; easy one-way binding support for Android, based on RxJava</li>
 <li><a href="https://github.com/Naturally-Being/G-Rex">G-Rex</a> &mdash; a tiny library that assists in saving and restoring objects to and from disk using RxJava on Android</li>
+<li><a href="http://stablekernel.com/blog/replace-asynctask-asynctaskloader-rx-observable-rxjava-android-patterns/">Replace AsyncTask and AsyncTaskLoader with rx.Observable</a> by Ross Hambrick</li>
 </ul>
 
 <h2 id="rxnetty">RxNetty</h2>
