--- a/documentation/operators/backpressure.html
+++ b/documentation/operators/backpressure.html
@@ -174,7 +174,7 @@
  as the use of the operators described on this page, or operators like
  <a href="buffer.html"><span class="operator">Buffer</span></a>, 
  <a href="sample.html"><span class="operator">Sample</span></a>, 
- <a href="throttle.html"><span class="operator">Throttle</span></a>, or
+ <a href="debounce.html"><span class="operator">Debounce</span></a>, or
  <a href="window.html"><span class="operator">Window</span></a>.
 </p>
 
@@ -182,7 +182,7 @@
 <ul>
  <li><a href="buffer.html"><span class="operator">Buffer</span></a></li>
  <li><a href="sample.html"><span class="operator">Sample</span></a></li>
- <li><a href="throttle.html"><span class="operator">Throttle</span></a></li>
+ <li><a href="debounce.html"><span class="operator">Debounce</span></a></li>
  <li><a href="window.html"><span class="operator">Window</span></a></li>
 </ul>
 
