Correcting interval diagrams & description

--- a/documentation/operators/interval.html
+++ b/documentation/operators/interval.html
@@ -53,7 +53,7 @@ id: interval
      <img src="images/interval.png" style="width:100%;" alt="interval" />
      <figcaption><p>
       RxGroovy implements this operator as <code>interval</code>. It accepts as its parameters a
-      span of time to wait between subsequent emissions and the <code>TimeUnit</code> in which this
+      span of time to wait between emissions and the <code>TimeUnit</code> in which this
       span is measured.
      </p><p>
       <code>interval</code> operates by default on the <code>computation</code>
@@ -78,7 +78,7 @@ id: interval
      <img src="images/interval.png" style="width:100%;" alt="interval" />
      <figcaption><p>
       RxJava implements this operator as <code>interval</code>. It accepts as its parameters a
-      span of time to wait between subsequent emissions and the <code>TimeUnit</code> in which this
+      span of time to wait between emissions and the <code>TimeUnit</code> in which this
       span is measured.
      </p><p>
       <code>interval</code> operates by default on the <code>computation</code>
@@ -103,7 +103,7 @@ id: interval
      <img src="images/interval.png" style="width:100%;" alt="interval" />
      <figcaption><p>
       RxJS implements this operator as <code>interval</code>. It accepts as its parameter the number
-      of milliseconds to wait between subsequent emissions.
+      of milliseconds to wait between emissions.
      </p><p>
       <code>interval</code> operates by default on the <code>timeout</code>
       <a href="../scheduler.html">Scheduler</a>, or you can optionally pass in a different Scheduler as a second
