--- a/documentation/operators/and-then-when.html
+++ b/documentation/operators/and-then-when.html
@@ -107,7 +107,7 @@ id: and-then-when
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxPY and then_do when %}
+  {% lang_operator RxPY and_ then_do when %}
       <h4>Sample Code</h4>
       <div class="code python"><pre>
 from __future__ import print_function
