Update RxScala scaladoc to 0.24.0

--- a/rxscala/scaladoc/rx/lang/scala/package.html
+++ b/rxscala/scaladoc/rx/lang/scala/package.html
@@ -90,7 +90,24 @@
 
         <div id="types" class="types members">
               <h3>Type Members</h3>
-              <ol><li name="rx.lang.scala.Notification" visbl="pub" data-isabs="true" fullComment="no" group="Ungrouped">
+              <ol><li name="rx.lang.scala.ExperimentalObservable" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+      <a id="ExperimentalObservable[+T]extendsAnyRef"></a>
+      <a id="ExperimentalObservable[+T]:ExperimentalObservable[T]"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">class</span>
+      </span>
+      <span class="symbol">
+        <a href="ExperimentalObservable.html"><span class="name">ExperimentalObservable</span></a><span class="tparams">[<span name="T">+T</span>]</span><span class="result"> extends <span class="extype" name="scala.AnyRef">AnyRef</span></span>
+      </span>
+      </h4><span class="permalink">
+      <a href="../../../index.html#rx.lang.scala.package@ExperimentalObservable[+T]extendsAnyRef" title="Permalink" target="_top">
+        <img src="../../../lib/permalink.png" />
+      </a>
+    </span>
+      <p class="shortcomment cmt"></p>
+    </li><li name="rx.lang.scala.Notification" visbl="pub" data-isabs="true" fullComment="no" group="Ungrouped">
       <a id="Notification[+T]extendsAnyRef"></a>
       <a id="Notification[+T]:Notification[T]"></a>
       <h4 class="signature">
@@ -294,7 +311,24 @@ Subscribers from given <code>onNext</code>/<code>onError</code>/<code>onComplete
 
         <div id="values" class="values members">
               <h3>Value Members</h3>
-              <ol><li name="rx.lang.scala.ImplicitFunctionConversions" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
+              <ol><li name="rx.lang.scala.ExperimentalAPIs" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+      <a id="ExperimentalAPIs"></a>
+      <a id="ExperimentalAPIs:ExperimentalAPIs"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">object</span>
+      </span>
+      <span class="symbol">
+        <a href="ExperimentalAPIs$.html"><span class="name">ExperimentalAPIs</span></a>
+      </span>
+      </h4><span class="permalink">
+      <a href="../../../index.html#rx.lang.scala.package@ExperimentalAPIs" title="Permalink" target="_top">
+        <img src="../../../lib/permalink.png" />
+      </a>
+    </span>
+      
+    </li><li name="rx.lang.scala.ImplicitFunctionConversions" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="ImplicitFunctionConversions"></a>
       <a id="ImplicitFunctionConversions:ImplicitFunctionConversions"></a>
       <h4 class="signature">
