Update RxScala scaladoc to 0.24.0 (#104)

--- a/tutorials.html
+++ b/tutorials.html
@@ -180,6 +180,7 @@
 <li><a href="http://channel9.msdn.com/Tags/reactive+extensions">Channel 9 MSDN videos on Reactive Extensions</a></li>
 <li><a href="http://channel9.msdn.com/Series/Rx-Workshop/Rx-Workshop-Observables-versus-Events">Rx Workshop: Observables vs. Events</a></li>
 <li><a href="http://channel9.msdn.com/Series/Rx-Workshop/Rx-Workshop-Unified-Programming-Model">Rx Workshop: Unified Programming Model</a></li>
+<li><a href="http://jake.ginnivan.net/blog/carnac-improvements/part-1/">Improving the Carnac Codebase and Rx Usage</a> by Jake Ginnivan</li>
 </ul>
 
 <h2 id="rxjs">RxJS</h2>
@@ -189,6 +190,7 @@
 <li><a href="https://www.youtube.com/watch?v=XRYN2xt11Ek">Netflix JavaScript Talks - Async JavaScript with Reactive Extensions</a> video of a talk by Jafar Husain about the Rx way of programming</li>
 <li><a href="http://bahmutov.calepin.co/journey-from-procedural-to-reactive-javascript-with-stops.html">Journey from procedural to reactive Javascript with stops</a> by Gleb Bahmutov</li>
 <li><a href="https://github.com/blesh/RxEmber">RxEmber</a> &mdash; an experimental set of helpers for Ember and RxJS</li>
+<li><a href="http://react.rocks/example/rxvision">rxvision</a> &mdash; a visualizer debugger for RxJS reactive streams</li>
 </ul>
 
 <h2 id="android">Android</h2>
